manifests/istio/virtualservices.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: istio-vs
  namespace: istio-system
spec:
  hosts:
    - "*"
  gateways:
    - main-gateway
  http:
    - match:
        - uri:
            prefix: /rabbitmq
      route:
        - destination:
            host: rabbitmq.rabbitmq.svc.cluster.local
            port:
              number: 15672
